@@ -1,3 +1,8 @@
+2011-06-07  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.base/async-shell.c: New file.
+	* gdb.base/async-shell.exp: New file.
+
 2011-06-06  Pedro Alves  <pedro@codesourcery.com>
 
 	* gdb.threads/pending-step.exp: Add more context to SIGTRAP match.
